syntax = "proto3";


enum BombAreaId {
    AREA_MED = 0;
    AREA_CIC = 1;
    AREA_CORRIDOR = 2;
    AREA_HALL = 3;
    AREA_SCI = 4;
    AREA_TEC = 5;
    AREA_PARCEL = 6;
    AREA_TUNNEL = 7;
}

enum BombAreaState {
    STATE_ARMED  = 0;
    STATE_FUSED = 1;
}

enum ModeSilentState {
    MODE_SILENT_STATE_EMPTY = 0;
    MODE_SILENT_STATE_NORMAL = 1;
    MODE_SILENT_STATE_SILENT = 2;
    MODE_SILENT_STATE_SILENT_DRONE = 3;
}

message BombBase {
    message Response {}

    message Request {}
}

message BombArea {
    message Response {}

    message Request {
        BombAreaId id = 1;
    }
}

message GetBombAreaState {
    message Response {
        BombAreaState state = 1;
    }

    message Request {
        BombAreaId id = 1;
    }
}

message GetModeSilentState {
    message Response {
        ModeSilentState state = 1;
    }

    message Request { }
}

message SetModeSilentState {
    message Request {
        ModeSilentState state = 1;
    }

    message Response { }
}
